# direnv.py

./: .travis.yml  README.md  setup.cfg  setup.py
direnv/: __init__.py
tests/direnv/: .envrc  load.py  read.py
tests/direnv/sub-dir/: .envrc
