# https://pypi.org/project/setupcfg-generator/
[metadata]
name = direnv
version = 2019.02.23
url = https://github.com/looking-for-a-job/direnv.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = direnv env

[options]
install_requires = 
	env_file
	public
	setuptools
packages = 
	direnv
