# https://pypi.org/project/setupcfg-generator/
[metadata]
name = direnv
version = 2020.5.9
url = https://github.com/andrewp-as-is/direnv.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = direnv env

[options]
install_requires = 
	env_file
	public
	setuptools
packages = 
	direnv
